@@ -1,3 +1,8 @@
+2020-11-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gvfs.el (tramp-gvfs-enabled):
+	Increase `max-specpdl-size' temporarily.
+
 2020-10-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.4.4.3 released.
